--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-bt~=0.2.9
+git+https://github.com/nathanramoscfa/bt.git
+git+https://github.com/nathanramoscfa/ffn.git
 cvxpy~=1.3.2
-ffn~=0.3.7
 matplotlib~=3.7.1
 numpy~=1.23.5
 pandas~=2.1.0
