--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-beautifulsoup4~=4.12.2
+beautifulsoup4>=4.12.2
 bt>=0.2.9
 cvxpy>=1.3.2
 ffn>=0.3.7
@@ -9,6 +9,5 @@ pyportfolioopt>=1.5.5
 requests>=2.31.0
 scipy>=1.11.2
 seaborn>=0.12.2
-setuptools~=68.0.0
+setuptools>=68.0.0
 tqdm>=4.65.0
-yahooquery>=2.3.3
